<?xml version="1.0"?>
<package format="2">
  <name>fuse_variables</name>
  <version>0.4.2</version>
  <description>
    The fuse_variables package provides a set of commonly used variable types, such as 2D and 3D positions,
    orientations, velocities, and accelerations.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <author email="tmoore@locusrobotics.com">Tom Moore</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>libceres-dev</build_depend>
  <build_depend>fuse_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>libceres-dev</exec_depend>
  <exec_depend>fuse_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>rclcpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
