<?xml version="1.0"?>
<package format="2">
  <name>fuse_viz</name>
  <version>1.0.1</version>
  <description>
    The fuse_viz package provides visualization tools for fuse.
  </description>

  <maintainer email="efernandez@clearpath.ai">Enrique Fernandez</maintainer>

  <license>BSD</license>
  <author email="efernandez@clearpath.ai">Enrique Fernandez</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>eigen</depend>
  <depend>fuse_constraints</depend>
  <depend>fuse_core</depend>
  <depend>fuse_msgs</depend>
  <depend>fuse_variables</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
